--- a/app/src/main/res/layout/item_dialog.xml
+++ b/app/src/main/res/layout/item_dialog.xml
@@ -56,6 +56,16 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1">
 
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/dialogType"
+                        android:layout_width="20dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="4dp"
+                        android:paddingStart="2dp"
+                        android:paddingEnd="0dp"
+                        android:tint="?android:textColorPrimary"
+                        tools:src="@drawable/ic_people" />
+
                     <TextView
                         android:id="@+id/dialogTitle"
                         android:layout_width="wrap_content"
@@ -65,7 +75,7 @@
                         android:singleLine="true"
                         android:textColor="?android:textColorPrimary"
                         android:textSize="18sp"
-                        tools:text="94. FlyInk" />
+                        tools:text="Unidevs" />
 
                     <!--                    <ImageView-->
                     <!--                        android:id="@+id/muted"-->
@@ -100,14 +110,15 @@
 
                 <ru.melod1n.vk.widget.CircleImageView
                     android:id="@+id/dialogUserAvatar"
-                    android:layout_width="28dp"
-                    android:layout_height="28dp"
-                    android:layout_marginEnd="6dp" />
+                    android:layout_width="26dp"
+                    android:layout_height="26dp"
+                    android:layout_marginEnd="4dp" />
 
                 <TextView
                     android:id="@+id/dialogText"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="2dp"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
                     android:maxLines="1"
