--- a/app/src/main/res/layout/item_dialog.xml
+++ b/app/src/main/res/layout/item_dialog.xml
@@ -34,7 +34,7 @@
                 android:layout_height="14dp"
                 android:layout_gravity="bottom|end"
                 android:layout_margin="3dp"
-                android:src="?colorPrimary" />
+                tools:src="@drawable/ic_online_pc" />
 
         </FrameLayout>
 
@@ -89,7 +89,7 @@
 
                 <TextView
                     android:id="@+id/dialogDate"
-                    android:layout_width="40dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="22dp"
                     android:gravity="center"
                     android:maxLines="1"
@@ -133,30 +133,32 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:minWidth="30dp"
+                    android:layout_weight="0"
                     android:padding="2dp">
 
                     <TextView
                         android:id="@+id/dialogCounter"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
+                        android:layout_marginEnd="4dp"
+                        android:background="@drawable/ic_conversations_counter_background"
+                        android:backgroundTint="?colorAccent"
+                        android:backgroundTintMode="multiply"
                         android:gravity="center"
-                        android:minWidth="20dp"
+                        android:minWidth="24dp"
                         android:minHeight="20dp"
-                        android:paddingStart="9dp"
-                        android:paddingTop="5dp"
-                        android:paddingEnd="9dp"
-                        android:paddingBottom="5dp"
+                        android:padding="4dp"
                         android:textColor="?android:textColorPrimaryInverse"
-                        android:textSize="12sp" />
+                        android:textSize="12sp"
+                        tools:text="12" />
 
-                    <ImageView
-                        android:id="@+id/dialogOutIcon"
-                        android:layout_width="8dp"
-                        android:layout_height="8dp"
+                    <ru.melod1n.vk.widget.CircleImageView
+                        android:id="@+id/dialogOut"
+                        android:layout_width="10dp"
+                        android:layout_height="10dp"
                         android:layout_gravity="center"
                         android:layout_marginEnd="4dp"
-                        android:contentDescription="@string/app_name" />
+                        android:src="?colorAccent" />
 
                 </FrameLayout>
             </LinearLayout>
