Some design improvements

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,8 @@
 <resources>
 
 
-    <style name="AppTheme.Toolbar" parent="Widget.MaterialComponents.Toolbar.Primary" />
+    <style name="AppTheme.Toolbar" parent="Widget.MaterialComponents.Toolbar.PrimarySurface">
+        <item name="titleTextColor">?colorAccent</item>
+    </style>
 
 </resources>
