--- a/app/src/main/res/drawable/ic_online_mobile.xml
+++ b/app/src/main/res/drawable/ic_online_mobile.xml
@@ -5,7 +5,7 @@
         android:width="14dp"
         android:height="14dp">
         <shape android:shape="oval">
-            <solid android:color="@color/online" />
+            <solid android:color="?colorAccent" />
             <corners android:radius="25dp" />
             <stroke
                 android:width="1dp"
