--- a/app/src/main/res/drawable/ic_online_pc.xml
+++ b/app/src/main/res/drawable/ic_online_pc.xml
@@ -5,7 +5,7 @@
         android:height="14dp">
         <shape android:shape="oval">
 
-            <solid android:color="@color/online" />
+            <solid android:color="?colorAccent" />
             <corners android:radius="50dp" />
             <stroke
                 android:width="1dp"
