--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -6,10 +6,10 @@
 
     <ru.melod1n.vk.widget.CircleImageView
         android:id="@+id/profileAvatar"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
         android:layout_centerVertical="true"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="14dp"
         android:src="?colorAccent"
         tools:src="?colorAccent" />
 
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="25dp"
         android:layout_alignTop="@+id/profileAvatar"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="14dp"
         android:layout_toEndOf="@+id/profileAvatar"
         android:gravity="center_vertical"
         android:maxLines="1"
@@ -31,8 +31,8 @@
         android:id="@+id/profileStatus"
         android:layout_width="match_parent"
         android:layout_height="25dp"
+        android:layout_alignStart="@+id/profileName"
         android:layout_alignBottom="@+id/profileAvatar"
-        android:layout_marginStart="8dp"
         android:layout_toEndOf="@+id/profileAvatar"
         android:gravity="center_vertical"
         android:textColor="?android:textColorSecondary"
