--- a/app/src/main/res/layout/recycler_view.xml
+++ b/app/src/main/res/layout/recycler_view.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     android:id="@+id/swipeRefreshLayout"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:elevation="5dp">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
