--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
@@ -7,6 +7,17 @@
         <item name="colorAccent">@color/accent</item>
         <item name="toolbarStyle">@style/AppTheme.Toolbar</item>
         <item name="android:windowLightStatusBar">true</item>
+
+        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
+        <item name="android:navigationBarDividerColor" tools:targetApi="o_mr1">#DBDBDB</item>
+        <item name="android:navigationBarColor">#eeeeee</item>
+    </style>
+
+    <style name="AppTheme.Toolbar" parent="Widget.MaterialComponents.Toolbar.PrimarySurface">
+        <item name="titleTextColor">?colorAccent</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:elevation">3dp</item>
+        <item name="android:background">?colorPrimary</item>
     </style>
 
 </resources>
