--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="80dp">
 
@@ -10,8 +9,7 @@
         android:layout_height="44dp"
         android:layout_centerVertical="true"
         android:layout_marginStart="14dp"
-        android:src="?colorAccent"
-        tools:src="?colorAccent" />
+        android:src="?colorAccent" />
 
     <TextView
         android:id="@+id/profileName"
@@ -23,9 +21,9 @@
         android:gravity="center_vertical"
         android:maxLines="1"
         android:singleLine="true"
+        android:text="@string/drawer_name_surname"
         android:textColor="?android:textColorPrimary"
-        android:textSize="16sp"
-        tools:text="Danil Nikolaev" />
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/profileStatus"
@@ -35,8 +33,8 @@
         android:layout_alignBottom="@+id/profileAvatar"
         android:layout_toEndOf="@+id/profileAvatar"
         android:gravity="center_vertical"
-        android:textColor="?android:textColorSecondary"
-        tools:text="Status" />
+        android:text="@string/drawer_status"
+        android:textColor="?android:textColorSecondary" />
 
     <View
         android:layout_width="match_parent"
