--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,6 +4,11 @@
     <group android:checkableBehavior="single">
 
         <item
+            android:id="@+id/navigationSearch"
+            android:icon="@drawable/ic_search"
+            android:title="@string/navigation_search" />
+
+        <item
             android:id="@+id/navigationConversations"
             android:icon="@drawable/ic_message_outline"
             android:title="@string/navigation_conversations" />
@@ -12,6 +17,11 @@
             android:id="@+id/navigationFriends"
             android:icon="@drawable/ic_people_outline"
             android:title="@string/navigation_friends" />
+
+        <item
+            android:id="@+id/navigationImportant"
+            android:icon="@drawable/ic_star_border"
+            android:title="@string/navigation_important" />
 
         <item
             android:id="@+id/navigationSettings"
