--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ffffff</color>
-    <color name="colorPrimaryDark">#ffffff</color>
+    <color name="primary">#ffffff</color>
+    <color name="primaryDark">#ffffff</color>
     <color name="accent">#5C9CE6</color>
+    <color name="navigationBar">#eeeeee</color>
 
     <color name="divider">#e6e6e6</color>
 </resources>
