--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,9 +15,10 @@
     </style>
 
     <style name="AppTheme.Toolbar" parent="Widget.MaterialComponents.Toolbar.PrimarySurface">
-        <item name="titleTextColor">?colorAccent</item>
+        <item name="titleTextAppearance">@style/Toolbar.Title</item>
         <item name="android:textSize">24sp</item>
         <item name="android:elevation">3dp</item>
+        <item name="titleTextColor">?colorAccent</item>
         <item name="android:background">?colorPrimary</item>
     </style>
 
