--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -1,13 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:id="@+id/messageRoot"
+    android:orientation="vertical"
+    tools:gravity="end">
 
     <TextView
-        android:id="@+id/text"
+        android:id="@+id/messageText"
         android:layout_width="wrap_content"
-        android:gravity="center"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="4dp"
+        android:paddingStart="14dp"
+        android:paddingTop="10dp"
+        android:paddingEnd="14dp"
+        android:paddingBottom="10dp"
+        tools:background="@drawable/ic_message_bubble_out_simple"
+        tools:gravity="end"
+        tools:text="Some text"
+        tools:textColor="?android:textColorPrimary" />
+
+    <TextView
+        android:id="@+id/messageDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:textColor="?android:textColorSecondary"
+        android:textSize="9sp"
+        tools:ignore="SmallSp"
+        tools:text="10:15" />
 
 </LinearLayout>
