--- a/app/src/main/res/layout/activity_messages.xml
+++ b/app/src/main/res/layout/activity_messages.xml
@@ -14,7 +14,8 @@
             layout="@layout/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="?actionBarSize" />
+            android:layout_marginTop="?actionBarSize"
+            android:layout_marginBottom="68dp" />
 
         <include layout="@layout/toolbar" />
 
