--- a/app/src/main/res/xml/fragment_settings_appearance.xml
+++ b/app/src/main/res/xml/fragment_settings_appearance.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <SwitchPreferenceCompat
-        app:defaultValue="false"
+    <ListPreference
+        app:defaultValue="1"
+        app:entries="@array/conversations_type_entries"
+        app:entryValues="@array/conversations_type_values"
         app:icon="@drawable/ic_format_size"
         app:key="appearance_extended_conversations"
-        app:title="Extended conversations" />
+        app:title="@string/pref_appearance_extended_conversations_title" />
 
 </PreferenceScreen>
