--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -24,4 +24,12 @@
         <item name="android:background">?colorPrimary</item>
     </style>
 
+    <style name="AppTheme.Start" parent="Theme.MaterialComponents.NoActionBar">
+        <item name="android:windowBackground">@color/accent</item>
+        <item name="colorPrimaryDark">@color/accent</item>
+        <item name="colorAccent">@color/accent</item>
+        <item name="android:navigationBarColor">@color/accent</item>
+        <item name="android:windowAnimationStyle">@style/AppTheme.ActivityAnimation</item>
+    </style>
+
 </resources>
