--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -32,4 +32,10 @@
         <item name="android:windowAnimationStyle">@style/AppTheme.ActivityAnimation</item>
     </style>
 
+    <style name="AppTheme.Update" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="colorPrimaryDark">@android:color/white</item>
+        <item name="colorAccent">@color/accent</item>
+        <item name="android:windowLightStatusBar">true</item>
+    </style>
+
 </resources>
