Фикс кривой разметки текста в чате

--- a/app/src/main/res/drawable/ic_message_bubble_in_simple.xml
+++ b/app/src/main/res/drawable/ic_message_bubble_in_simple.xml
@@ -4,10 +4,12 @@
 
     <solid android:color="#5C9CE6" />
 
-    <corners
-        android:bottomLeftRadius="5dp"
-        android:bottomRightRadius="28dp"
-        android:topLeftRadius="5dp"
-        android:topRightRadius="28dp" />
+    <corners android:radius="28dp" />
+
+<!--    <corners-->
+<!--        android:bottomLeftRadius="5dp"-->
+<!--        android:bottomRightRadius="28dp"-->
+<!--        android:topLeftRadius="5dp"-->
+<!--        android:topRightRadius="28dp" />-->
 
 </shape>
