--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -10,4 +10,8 @@
         <attr name="bounded_height" format="dimension" />
     </declare-styleable>
 
+    <declare-styleable name="WrapTextView">
+        <attr name="fixWrap" format="boolean" />
+    </declare-styleable>
+
 </resources>
