--- a/app/src/main/res/drawable/chat_panel_background_blocked.xml
+++ b/app/src/main/res/drawable/chat_panel_background_blocked.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <corners
-        android:bottomLeftRadius="36dp"
-        android:bottomRightRadius="8dp"
-        android:topLeftRadius="36dp"
-        android:topRightRadius="36dp" />
+    <corners android:radius="36dp" />
+
+    <!--    <corners-->
+    <!--        android:bottomLeftRadius="36dp"-->
+    <!--        android:bottomRightRadius="8dp"-->
+    <!--        android:topLeftRadius="36dp"-->
+    <!--        android:topRightRadius="36dp" />-->
 
     <solid android:color="#FF734C" />
 
