--- a/app/src/main/res/xml/fragment_settings_appearance.xml
+++ b/app/src/main/res/xml/fragment_settings_appearance.xml
@@ -3,6 +3,7 @@
 
     <ListPreference
         app:defaultValue="1"
+        app:enabled="false"
         app:entries="@array/conversations_type_entries"
         app:entryValues="@array/conversations_type_values"
         app:icon="@drawable/ic_format_size"
