--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/messageRoot"
     android:layout_width="match_parent"
@@ -12,7 +11,6 @@
         android:id="@+id/messageContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <ru.melod1n.vk.widget.CircleImageView
@@ -20,6 +18,8 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             tools:src="?colorAccent" />
 
         <ru.melod1n.vk.widget.BoundedLinearLayout
@@ -47,7 +47,7 @@
                 android:paddingTop="10dp"
                 android:paddingEnd="14dp"
                 android:paddingBottom="10dp"
-                app:fixWrap="true"
+
                 tools:gravity="end"
                 tools:text="Some text"
                 tools:textColor="?android:textColorPrimary" />
