Временно новый вид каналов

--- a/app/src/main/res/layout/item_message_normal_in.xml
+++ b/app/src/main/res/layout/item_message_normal_in.xml
@@ -40,6 +40,7 @@
             android:paddingTop="10dp"
             android:paddingEnd="14dp"
             android:paddingBottom="10dp"
+            android:textColorLink="@android:color/white"
             android:textColor="@android:color/white"
             app:fixWrap="true"
             tools:text="Some text" />
