--- a/app/src/main/res/drawable/ic_message_bubble_in_simple.xml
+++ b/app/src/main/res/drawable/ic_message_bubble_in_simple.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#5C9CE6" />
+    <solid android:color="?colorAccent" />
 
     <corners android:radius="28dp" />
 
