--- a/app/src/main/res/layout/activity_messages.xml
+++ b/app/src/main/res/layout/activity_messages.xml
@@ -1,136 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+    <include
+        layout="@layout/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="?actionBarSize" />
 
-        <include
-            layout="@layout/recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="?actionBarSize" />
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:gravity="center_vertical"
+        app:contentInsetStart="0dp"
+        app:contentInsetStartWithNavigation="0dp">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
-            android:gravity="center_vertical"
-            app:contentInsetStart="0dp"
-            app:contentInsetStartWithNavigation="0dp">
-
-            <ru.melod1n.vk.widget.CircleImageView
-                android:id="@+id/chatAvatar"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_marginStart="0dp"
-                android:layout_marginEnd="10dp"
-                android:src="?colorAccent" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:orientation="vertical"
-                android:paddingStart="0dp"
-                android:paddingEnd="12dp">
-
-                <TextView
-                    android:id="@+id/chatTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/tt_commons_medium"
-                    android:singleLine="true"
-                    android:textAppearance="?android:textAppearanceLarge"
-                    android:textColor="?colorAccent"
-                    tools:text="Title" />
-
-                <TextView
-                    android:id="@+id/chatInfo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:singleLine="true"
-                    android:textAppearance="?android:textAppearanceSmall"
-                    android:textColor="?android:textColorSecondary"
-                    tools:text="Offline"
-                    tools:visibility="visible" />
-
-            </LinearLayout>
-
-
-        </androidx.appcompat.widget.Toolbar>
-
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            tools:visibility="gone" />
-
-        <include
-            layout="@layout/no_items_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone" />
+        <ru.melod1n.vk.widget.CircleImageView
+            android:id="@+id/chatAvatar"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="10dp"
+            android:src="?colorAccent" />
 
         <LinearLayout
-            android:id="@+id/chatPanel"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_gravity="bottom"
-            android:layout_margin="8dp"
-            android:background="@drawable/chat_panel_background"
+            android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:paddingStart="12dp"
+            android:orientation="vertical"
+            android:paddingStart="0dp"
             android:paddingEnd="12dp">
 
-            <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/chatMessage"
-                android:layout_width="0dp"
+            <TextView
+                android:id="@+id/chatTitle"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:layout_marginEnd="4dp"
-                android:layout_weight="1"
-                android:background="@android:color/transparent"
-                android:ems="10"
-                android:gravity="center_vertical"
-                android:hint="@string/chat_message_hint"
-                android:inputType="text|textCapSentences"
-                android:minHeight="44dp" />
+                android:fontFamily="@font/tt_commons_medium"
+                android:singleLine="true"
+                android:textAppearance="?android:textAppearanceLarge"
+                android:textColor="?colorAccent"
+                tools:text="Title" />
 
-            <androidx.appcompat.widget.AppCompatImageButton
-                android:id="@+id/chatSend"
-                android:layout_width="42dp"
-                android:layout_height="42dp"
-                android:background="?selectableItemBackgroundBorderless"
-                android:src="@drawable/ic_mic"
-                android:tint="?colorAccent" />
+            <TextView
+                android:id="@+id/chatInfo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:textAppearance="?android:textAppearanceSmall"
+                android:textColor="?android:textColorSecondary"
+                tools:text="Offline"
+                tools:visibility="visible" />
 
         </LinearLayout>
 
-        <include
-            layout="@layout/no_internet_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone" />
 
-    </FrameLayout>
+    </androidx.appcompat.widget.Toolbar>
 
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/navigationView"
+    <ProgressBar
+        android:id="@+id/progressBar"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        app:headerLayout="@layout/activity_main_drawer_header"
-        app:itemBackground="@drawable/navigation_view_item_background_selector"
-        app:itemIconTint="@drawable/navigation_view_item_icon_colors"
-        app:itemTextColor="@drawable/navigation_view_item_text_colors"
-        app:menu="@menu/activity_main_drawer" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        tools:visibility="gone" />
 
-</androidx.drawerlayout.widget.DrawerLayout>
+    <include
+        layout="@layout/no_items_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
+
+    <LinearLayout
+        android:id="@+id/chatPanel"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_gravity="bottom"
+        android:layout_margin="8dp"
+        android:background="@drawable/chat_panel_background"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp">
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/chatMessage"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:layout_marginEnd="4dp"
+            android:layout_weight="1"
+            android:background="@android:color/transparent"
+            android:ems="10"
+            android:gravity="center_vertical"
+            android:hint="@string/chat_message_hint"
+            android:inputType="text|textCapSentences"
+            android:minHeight="44dp" />
+
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/chatSend"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            android:background="?selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_mic"
+            android:tint="?colorAccent" />
+
+    </LinearLayout>
+
+    <include
+        layout="@layout/no_internet_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
