--- a/app/src/main/res/layout/item_message_normal_out.xml
+++ b/app/src/main/res/layout/item_message_normal_out.xml
@@ -57,6 +57,7 @@
             android:paddingEnd="14dp"
             android:paddingBottom="10dp"
             android:textColor="?android:textColorPrimary"
+            android:textColorLink="?colorAccent"
             app:fixWrap="true"
             tools:text="Some text" />
 
