--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,13 +6,14 @@
         <item name="colorPrimaryDark">@color/primaryDark</item>
         <item name="colorAccent">@color/accent</item>
         <item name="toolbarStyle">@style/AppTheme.Toolbar</item>
-        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
+        <item name="android:windowLightStatusBar">true</item>
         <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
 
         <item name="android:windowAnimationStyle">@style/AppTheme.ActivityAnimation</item>
 
         <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
-        <item name="android:navigationBarDividerColor" tools:targetApi="o_mr1">#DBDBDB</item>
+        <item name="android:navigationBarDividerColor" tools:targetApi="o_mr1">@android:color/transparent</item>
+
         <item name="android:navigationBarColor">@color/navigationBar</item>
     </style>
 
