--- a/app/src/main/res/layout/no_items_view.xml
+++ b/app/src/main/res/layout/no_items_view.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/noItemsView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?android:windowBackground"
     android:gravity="center"
-    android:id="@+id/noItemsView"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -13,12 +15,26 @@
         android:src="@drawable/ic_kitten" />
 
     <TextView
+        android:id="@+id/noItemsText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/tt_commons_regular"
         android:layout_marginTop="6dp"
-        android:text="@string/dialog_is_empty"
+        android:fontFamily="@font/tt_commons_regular"
         android:textAppearance="?android:textAppearanceMedium"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        tools:text="@string/list_is_empty" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/noItemsRefresh"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:elevation="0dp"
+        android:text="@string/refresh"
+        android:textAllCaps="false"
+        android:textColor="?colorAccent"
+        app:backgroundTint="@android:color/transparent"
+        app:rippleColor="?colorAccent" />
 
 </LinearLayout>
